# colaboraEduNovo

./: .env.development  .env.development.example  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DOCUMENTACAO_CRIADA.md  DOCUMENTACAO_RESUMO.txt  MODERNIZACAO-100-COMPLETA.md  MODERNIZACAO-COMPLETA.md  MODERNIZACAO-VISUAL.md  Makefile  NOTIFICACOES.md  PROXIMOS-PASSOS-IMPLEMENTADOS.md  PROXIMO_PASSO.txt  README.md  STATUS_FINAL.md  SUMMARY_DOCUMENTACAO.md  audit-remediation-plan.md  deploy-to-hetzner.md  dev.sh  development-plan.md  docker-compose.caddy.yml  docker-compose.prod.yml  docker-compose.yml  evo_docker-compose.yaml  fetch_wa_version.py  get_wa_version.js  install_key.py  prompt.md  start.sh
backend/: Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml  worker.py
backend/app/: __init__.py  cli.py  wsgi.py
backend/app/api/: __init__.py
backend/app/core/: cache.py  config.py  crypto.py  database.py  decorators.py  exceptions.py  extensions.py  handlers.py  helpers.py  middleware.py  queue.py  roles.py  security.py  tasks.py  tasks_comunicados.py  tasks_smoke.py  (+1 more)
backend/migrations/: env.py
backend/scripts/: bare_usuarios.py
backend/tests/: conftest.py  test_access_notice_service.py  test_alunos.py  test_auth.py  test_billing.py  test_comunicados.py  test_crypto.py  test_escola.py  test_health.py  test_ingestion.py  test_lgpd.py  test_observability.py  test_occurrence_notifications.py  test_pedagogical_agent.py  test_production_hardening.py  test_professores.py  test_security.py  test_security_fixes.py  test_services_coverage.py
(+311 files in other folders)
