[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "boletins-backend"
version = "0.1.0"
description = "API Flask modernizada para o Sistema de Boletins do Colégio Frei Ronaldo"
readme = "README.md"
authors = [
    { name = "Equipe ColaboraFrei" }
]
license = { text = "Proprietary" }
requires-python = ">=3.12"
dependencies = [
    "Flask>=3.0.3",
    "Flask-CORS>=4.0.0",
    "flask-jwt-extended>=4.6.0",
    "SQLAlchemy>=2.0.31",
    "alembic>=1.13.2",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.3.4",
    "marshmallow>=3.21.2",
    "passlib>=1.7.4",
    "pdfplumber>=0.11.0",
    "python-dotenv>=1.0.1",
    "loguru>=0.7.2",
    "werkzeug>=3.0.3",
    "gunicorn>=22.0.0",
    "psycopg2>=2.9.9",
    "redis>=5.0.0",
    "rq>=1.16.1",
    "bcrypt>=4.1.1",
    "scikit-learn>=1.5.0",
    "pandas>=2.2.0",
    "xhtml2pdf>=0.2.16",
    "Flask-Mail>=0.9.1",
    "requests>=2.31.0",
    "Flask-Limiter>=3.8.0",
    "openpyxl>=3.1.2",
    "sentry-sdk[flask]>=2.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.7",
    "mypy>=1.11.2",
    "types-passlib",
    "httpx>=0.27.0"
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --disable-warnings"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

